GNOME Bugzilla – Bug 703825
Seahorse UI ( File->New... dialog) is broken
Last modified: 2013-10-25 20:34:59 UTC
Created attachment 248666 [details] Correct UI dialog Steps to reproduce: File->New...-> You can see a treeview that's not even one row tall. There's also significant empty space between the treeview and the buttons. I'm attaching a screenshot of the broken UI and the correct UI. Broken UI dialog: https://bug703398.bugzilla-attachments.gnome.org/attachment.cgi?id=248449
This is due to a bug in GTK+. What version of GTK+ are you using?
libgtk-2.0. I used http://stackoverflow.com/questions/126141/how-do-you-find-out-which-version-of-gtk-is-installed-on-ubuntu to find the gtk version.
That line doesn't contain any relevant data. It seems that on Ubuntu the package name simply contains a 2.0, even though the package version is not 2.0 (go figure). I'm not an ubuntu user, but I think something like this would get the information: $ dpkg -l '*gtk*'
I get the same when running seahorse from jhbuild using gtk 3.9.7. Aruna, 'jhbuild run pkg-config --modversion gtk+-3.0' :)
I am running seahorse from jhbuild using gtk 3.9.13
I get it in 3.9.91 which is installed to the system (Fedora 20). It makes the new key dialog unusable :-/
Created attachment 257385 [details] [review] Fix generate-select dialog for GTK+ changes The default behavior of gtk_container_add() changed so that it no longer sets expand=TRUE and fill=TRUE
Attachment 257385 [details] pushed as a2b81b0 - Fix generate-select dialog for GTK+ changes
*** Bug 709038 has been marked as a duplicate of this bug. ***
*** Bug 710779 has been marked as a duplicate of this bug. ***