Fix generate-select dialog for GTK+ changes

The default behavior of gtk_container_add() changed so that it no longer
sets expand=TRUE and fill=TRUE

https://bugzilla.gnome.org/show_bug.cgi?id=703825